feat: push after publish

--- a/template/package.json.mustache
+++ b/template/package.json.mustache
@@ -12,7 +12,8 @@
     "debug": "alfy-init",
     "clean": "alfy-cleanup",
     "postinstall": "alfy-init",
-    "preuninstall": "alfy-cleanup"
+    "preuninstall": "alfy-cleanup",
+    "postpublish": "git push"
   },
   "author": {
     "name": "val-istar-guo",
