--- a/template/README.md.mustache
+++ b/template/README.md.mustache
@@ -16,6 +16,12 @@
 
 <!-- description -->{{{addition.description}}}<!-- description -->
 
+## Install
+
+```bash
+npm install -g {{{project.name}}}
+```
+
 ## Usage
 
 <!-- usage -->{{{addition.usage}}}<!-- usage -->
